# AutonomousRobotics

.catkin_tools/profiles/default/: devel_collisions.txt
AutonomousRobotics/devel/: .catkin  local_setup.sh
AutonomousRobotics/src/aro_scan/: CMakeLists.txt
aro_semestral/aro_evaluathor/: CMakeLists.txt
aro_semestral/aro_evaluathor/launch/: eval_world.launch
aro_semestral/aro_evaluathor/maps/: aro_maze_8.txt
aro_semestral/aro_evaluathor/scripts/: map_fix.py
aro_semestral/aro_exploration/launch/: exploration.launch
aro_semestral/aro_sim/urdf/: turtlebot3_burger.gazebo.xacro
aro_semestral/aro_sim/worlds/: aro_maze_1.world
aro_slam_mine/launch/: tf_metrics.launch
aro_slam_mine/scripts/: icp_slam
aro_slam_mine/src/aro_slam/: clouds.py  icp.py  occupancy.py
devel/: .catkin  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.sh
devel/.private/aro_control/: .catkin
devel/.private/aro_evaluathor/: .catkin  local_setup.sh
devel/.private/aro_exploration/: .catkin  setup.sh
devel/.private/aro_frontier/: .catkin  setup.sh
devel/.private/aro_msgs/: local_setup.sh
devel/.private/aro_planning/: .catkin  local_setup.sh
devel/.private/aro_robocop/: .rosinstall  setup.sh
devel/.private/aro_sim/: .catkin  setup.sh
devel/.private/aro_slam/: local_setup.sh
devel/.private/catkin_tools_prebuild/: local_setup.sh
devel/.private/ros_numpy/: .catkin
devel/include/aro_msgs/: FollowPathActionFeedback.h  FollowPathActionResult.h  FollowPathFeedback.h  FollowPathGoal.h  FollowPathResult.h  GenerateFrontierResponse.h
devel/lib/aro_evaluathor/: gt_builder.py  run_eval.py
devel/lib/aro_slam/: cloud_filter  occupancy_mapper
devel/lib/pkgconfig/: aro_control.pc  aro_exploration.pc  aro_msgs.pc  aro_planning.pc  aro_robocop.pc  aro_sim.pc  ros_numpy.pc
hw01/devel/: .catkin  local_setup.sh
hw01/src/aro_scan/: CMakeLists.txt
hw02/devel/: .catkin  .rosinstall  setup.sh
hw02/src/aro_robocop/: CMakeLists.txt
hw03/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
hw03/devel/share/voxel_map/: package.xml
hw03/src/: .rosinstall  .rosinstall.bak
hw04/devel/: .catkin  .rosinstall  setup.sh
hw05/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
hw05/src/aro_msgs/: CMakeLists.txt
hw05/src/aro_planning/: CMakeLists.txt
hw06/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
hw06/src/aro_hw06/aro_slam/: CMakeLists.txt
hw06/src/aro_hw06/aro_slam/launch/: icp_slam.launch
hw06/src/aro_hw06/aro_slam/scripts/: cloud_filter
hw06/src/aro_hw06/aro_slam/src/aro_slam/: __init__.py
learning/devel/: .catkin  setup.sh
logs/aro_exploration/: build.check.018.log.stderr
src/aro_evaluathor/: CMakeLists.txt  package.xml
src/aro_exploration/: CMakeLists.txt  package.xml  setup.py
src/aro_exploration/launch/: exploration.launch
src/aro_exploration/scripts/: explorer.py
sw01/devel/: .catkin  _setup_util.py  setup.bash  setup.zsh
sw01/src/aro_control/: CMakeLists.txt
sw01/src/aro_control/config/: control.yaml
sw01/src/aro_control/launch/: evaluation.launch  onlysim.launch
sw01/src/aro_control/rviz/: control.rviz
sw01/src/aro_control/scripts/: path_follower.py  path_follower_evaluator.py
(+688 files in other folders)
